--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,11 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ "ci" ]
-  pull_request:
-    branches: [ "ci" ]
+  workflow_dispatch:
 
 jobs:
-  build:
-
+  unit_tests:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,6 +20,19 @@ jobs:
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
         
+  android_tests:
+    runs-on:  macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'zulu'
+          cache: 'gradle'
+          
       - name: Run connected tests
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
@@ -32,3 +40,4 @@ jobs:
           target: google_apis
           arch: x86_64
           script: ./gradlew connectedCheck
+        
