--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,10 +1,14 @@
 name: Android CD
 
 on:
-  workflow_dispatch:
-
+  push:
+    tags:
+      - 'v*'
+  
+permissions: write-all
+  
 jobs:
-  build_artifact:
+  create_release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,44 +21,41 @@ jobs:
           distribution: 'zulu'
           cache: 'gradle'
         
-      - name: Sign artifact
-        id: signArtifact
-        uses: r0adkll/sign-android-release@v1.0.1
+      - name: Build APK
+        uses: eskatos/gradle-command-action@v1.3.3
         with:
-          releaseDirectory: app/build/outputs/apk/ourbuildtype/release
-          alias: ${{ secrets.KEYALIAS }}
-          signingKeyBase64: ${{ secrets.KEYSTORE }}
-          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-
+          gradle-version: current
+          wrapper-cache-enabled: true
+          dependencies-cache-enabled: true
+          configuration-cache-enabled: true
+          arguments: assembleRelease
+          
       - name: Upload APK
-        uses: actions/upload-artifact@v2.2.0
+        uses: actions/upload-artifact@master
         with:
-          name: Release artifact
-          path: app/build/outputs/apk/ourbuildtype/release/app-artifact-*.apk
+          name: app-release-unsigned.apk
+          path: app/build/outputs/apk/release
           
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
           
-      - name: Save name of our Artifact
-        id: set-result-artifact
+      - name: Save name of our artifact
         run: |
-          ARTIFACT_PATHNAME_APK=$(ls app/build/outputs/apk/ourbuildtype/release/*.apk | head -n 1)
+          ARTIFACT_PATHNAME_APK=$(ls app/build/outputs/apk/release/*.apk | head -n 1)
           ARTIFACT_NAME_APK=$(basename $ARTIFACT_PATHNAME_APK)
           echo "ARTIFACT_NAME_APK is " ${ARTIFACT_NAME_APK}
           echo "ARTIFACT_PATHNAME_APK=${ARTIFACT_PATHNAME_APK}" >> $GITHUB_ENV
           echo "ARTIFACT_NAME_APK=${ARTIFACT_NAME_APK}" >> $GITHUB_ENV
 
-      - name: Upload our Artifact Assets
-        id: upload-release-asset
+      - name: Upload our artifact asset to the release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
