--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,12 @@
-name: Android CI
+name: Build Status
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+    - development
+  pull_request:
+    branches:
+    - development
 
 jobs:
   unit_tests:
